welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: ';' expected but '(' found.
  var T : Array[Color](taille)
                      ^